--- a/Lavish Lifestyle Inventory/orders.html
+++ b/Lavish Lifestyle Inventory/orders.html
@@ -396,9 +396,9 @@
           </a>
           <div id="productSubmenu" style="max-height:0;">
             <a href="product-masterlist.html" class="submenu-link">• Product Master List</a>
-            <a href="#" class="submenu-link">• Categories, Brands & Units of Storage</a>
-            <a href="#" class="submenu-link">• Barcode Generation</a>
-            <a href="#" class="submenu-link">• Product Bundling</a>
+            <a href="/categories.html" class="submenu-link">• Categories, Brands & Units of Storage</a>
+            <a href="/barcodegen.html" class="submenu-link">• Barcode Generation</a>
+            <a href="/productbundling.html" class="submenu-link">• Product Bundling</a>
           </div>
         </div>
 
@@ -409,69 +409,69 @@
             <i class="fas fa-chevron-down small" id="inventoryControlChevron"></i>
           </a>
           <div id="inventoryControlSubmenu" style="max-height:0;">
-            <a href="#" class="submenu-link">• Stock Level Tracking</a>
-            <a href="#" class="submenu-link">• Goods Received (GRN) Entry</a>
-            <a href="#" class="submenu-link">• Stock Adjustments</a>
-            <a href="#" class="submenu-link">• Warehouse/Location Management</a>
-            <a href="#" class="submenu-link">• Batch and Expiry Tracking</a>
+            <a href="/stockleveltracking.html" class="submenu-link">• Stock Level Tracking</a>
+            <a href="/goodsreceived.html" class="submenu-link">• Goods Received (GRN) Entry</a>
+            <a href="/stockadjustments.html" class="submenu-link">• Stock Adjustments</a>
+            <a href="/warehouse.html" class="submenu-link">• Warehouse/Location Management</a>
+            <a href="/batchtracking.html" class="submenu-link">• Batch and Expiry Tracking</a>
           </div>
         </div>
 
-        <!-- NEW: Stock Movement & Transfers with collapsible submenu -->
+        <!-- Stock Movement & Transfers with collapsible submenu -->
         <div class="nav-item">
           <a class="nav-link d-flex justify-content-between align-items-center" href="#" id="stockMovementToggle" role="button" aria-expanded="false" aria-controls="stockMovementSubmenu">
             <span><i class="fa fa-exchange-alt"></i> <span>Stock Movement & Transfers</span></span>
             <i class="fas fa-chevron-down small" id="stockMovementChevron"></i>
           </a>
           <div id="stockMovementSubmenu" style="max-height:0;">
-            <a href="#" class="submenu-link">• Inter-warehouse Stock Transfer</a>
-            <a href="#" class="submenu-link">• Stock in Transit</a>
-            <a href="#" class="submenu-link">• Delivery Note and Receiving Confirmation</a>
+            <a href="/wstocktransfer.html" class="submenu-link">• Inter-warehouse Stock Transfer</a>
+            <a href="/stockintransit.html" class="submenu-link">• Stock in Transit</a>
+            <a href="/deliverynote.html" class="submenu-link">• Delivery Note and Receiving Confirmation</a>
           </div>
         </div>
 
-        <!-- NEW: Purchase Management with collapsible submenu -->
+        <!-- Purchase Management with collapsible submenu -->
         <div class="nav-item">
           <a class="nav-link d-flex justify-content-between align-items-center" href="#" id="purchaseManagementToggle" role="button" aria-expanded="false" aria-controls="purchaseManagementSubmenu">
             <span><i class="fa fa-shopping-cart"></i> <span>Purchase Management</span></span>
             <i class="fas fa-chevron-down small" id="purchaseManagementChevron"></i>
           </a>
           <div id="purchaseManagementSubmenu" style="max-height:0;">
-            <a href="#" class="submenu-link">• Supplier Database</a>
-            <a href="#" class="submenu-link">• Purchase Requisitions (PR)</a>
-            <a href="#" class="submenu-link">• Purchase Orders (PO)</a>
-            <a href="#" class="submenu-link">• Goods Receipt Note (GRN)</a>
-            <a href="#" class="submenu-link">• Supplier Invoice & Payment Tracking</a>
+            <a href="/supplierdatabase.html" class="submenu-link">• Supplier Database</a>
+            <a href="/purchaseR.html" class="submenu-link">• Purchase Requisitions (PR)</a>
+            <a href="/purchaseorder.html" class="submenu-link">• Purchase Orders (PO)</a>
+            <a href="/goodsreceipt.html" class="submenu-link">• Goods Receipt Note (GRN)</a>
+            <a href="/supinvoice.html" class="submenu-link">• Supplier Invoice & Payment Tracking</a>
           </div>
         </div>
 
-        <!-- NEW: Sales Management with collapsible submenu -->
+        <!-- Sales Management with collapsible submenu -->
         <div class="nav-item">
           <a class="nav-link d-flex justify-content-between align-items-center" href="#" id="salesManagementToggle" role="button" aria-expanded="false" aria-controls="salesManagementSubmenu">
             <span><i class="fa fa-chart-bar"></i> <span>Sales Management</span></span>
             <i class="fas fa-chevron-down small" id="salesManagementChevron"></i>
           </a>
           <div id="salesManagementSubmenu" style="max-height:0;">
-            <a href="#" class="submenu-link">• Customer Database</a>
-            <a href="#" class="submenu-link">• Sales Quotation & Order Creation</a>
-            <a href="#" class="submenu-link">• Invoicing & Payment Tracking</a>
-            <a href="#" class="submenu-link">• Discounts, Taxes, and Credit Sales</a>
-            <a href="#" class="submenu-link">• Point-of-Sale (POS) Integration</a>
+            <a href="/cusdatabase.html" class="submenu-link">• Customer Database</a>
+            <a href="/salesquotation.html" class="submenu-link">• Sales Quotation & Order Creation</a>
+            <a href="/invoice&paytrack.html" class="submenu-link">• Invoicing & Payment Tracking</a>
+            <a href="/discounts.html" class="submenu-link">• Discounts, Taxes, and Credit Sales</a>
+            <a href="/pos.html" class="submenu-link">• Point-of-Sale (POS) Integration</a>
           </div>
         </div>
 
-        <!-- NEW: Reporting & Analytics with collapsible submenu -->
+        <!-- Reporting & Analytics with collapsible submenu -->
         <div class="nav-item">
           <a class="nav-link d-flex justify-content-between align-items-center" href="#" id="reportingAnalyticsToggle" role="button" aria-expanded="false" aria-controls="reportingAnalyticsSubmenu">
             <span><i class="fa fa-chart-pie"></i> <span>Reporting & Analytics</span></span>
             <i class="fas fa-chevron-down small" id="reportingAnalyticsChevron"></i>
           </a>
           <div id="reportingAnalyticsSubmenu" style="max-height:0;">
-            <a href="#" class="submenu-link">• Inventory Valuation Reports</a>
-            <a href="#" class="submenu-link">• Fast-moving/Slow-moving Item Reports</a>
-            <a href="#" class="submenu-link">• Daily/Weekly/Monthly Sales Summaries</a>
-            <a href="#" class="submenu-link">• Gross Margin & Profitability Analysis</a>
-            <a href="#" class="submenu-link">• Stock Aging and Reorder Level Alerts</a>
+            <a href="/invalreports.html" class="submenu-link">• Inventory Valuation Reports</a>
+            <a href="/movingitems.html" class="submenu-link">• Fast-moving/Slow-moving Item Reports</a>
+            <a href="/salessummary.html" class="submenu-link">• Daily/Weekly/Monthly Sales Summaries</a>
+            <a href="/grossanalysis.html" class="submenu-link">• Gross Margin & Profitability Analysis</a>
+            <a href="/stocklevelalerts.html" class="submenu-link">• Stock Aging and Reorder Level Alerts</a>
           </div>
         </div>
 
